--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -2,13 +2,64 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_red_light">
+    android:background="@drawable/bgmain"
+    android:orientation="vertical">
 
-    <TextView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/header_home"
+        android:orientation="horizontal"
+        android:background="#585858"
+        android:layout_alignParentTop="true">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_alignParentLeft="true"
+            android:text="GUIDE"
+            android:textColor="#FF0000"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+    <Button
+        android:id="@+id/btn_champ"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_centerVertical="true"
+        android:text="CHAMPS"
+        android:textStyle="bold"
+        android:textSize="30dp"
+        android:layout_above="@+id/btn_ITEMS"
+        />
+    <Button
+        android:id="@+id/btn_ITEMS"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_centerVertical="true"
+        android:text="ITEMS"
+        android:textStyle="bold"
+        android:textSize="30dp"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_centerVertical="true"
+        android:text="RUNES"
+        android:layout_below="@+id/btn_ITEMS"
+        android:textStyle="bold"
+        android:textSize="30dp"/>
+
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="GUIDE"
-        android:textSize="50dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_up"
+        >
+
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 </RelativeLayout>
