--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bgmain"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/header_home"
+        android:orientation="horizontal"
+        android:background="#585858"
+        android:layout_alignParentTop="true">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:paddingLeft="60dp"
+            android:layout_alignParentLeft="true"
+            android:text="HOME"
+            android:textColor="#FF0000"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+        <EditText
+            android:layout_width="160dp"
+            android:layout_alignParentRight="true"
+            android:layout_height="wrap_content"
+            android:paddingVertical="5dp"
+            android:hint="  Search..."
+            android:textStyle="italic"
+            android:background="@color/cardview_light_background"></EditText>
+    </RelativeLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_news"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/header_home"
         android:layout_margin="@dimen/activity_vertical_margin" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_up"
+        >
+
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 </RelativeLayout>
