--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,63 +3,33 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/edit_text_shape"
     android:layout_marginBottom="10dp">
 
-    <TextView
-        android:id="@+id/tv_itemDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:gravity="start"
-        android:text="6 days ago"
-        android:textAlignment="textStart"
-        android:textSize="20dp" />
-
-    <RelativeLayout
-        android:id="@+id/lo_journal_background"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_itemDate"
-        android:background="@drawable/edit_text_shape"
-        android:focusable="true">
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:id="@+id/header_item"
-            >
-
-            <TextView
-                android:id="@+id/tv_itemTitle"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginRight="8dp"
-                android:layout_alignParentLeft="true"
-                android:text="Title"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-            <TextView
-                android:id="@+id/tv_itemTime"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:text="4:00 pm"
-                android:textSize="20dp"
-                android:layout_alignParentRight="true"
-                />
-        </RelativeLayout>
         <TextView
-            android:id="@+id/tv_itemContent"
+            android:id="@+id/tv_itemTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="15-11-19 4:00 pm"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:textSize="15sp" />
+        <ImageView
+            android:id="@+id/tv_itemPicture"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginRight="8dp"
-            android:layout_below="@+id/header_item"
-            android:gravity="center"
-            android:inputType="text"
-            android:maxLines="1"
-            android:text="Post 1"
-            android:textSize="20dp" />
-
-    </RelativeLayout>
+            android:layout_height="150dp"
+            android:src="@drawable/aphelios"
+            android:layout_below="@+id/tv_itemTime"
+            android:layout_marginVertical="@dimen/activity_vertical_margin"
+            android:gravity="center" />
+        <TextView
+            android:id="@+id/tv_itemTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Chi tiet ky nang Aphelios"
+            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+            android:textSize="25sp"
+            android:layout_below="@+id/tv_itemPicture"
+            android:textStyle="bold" />
 
 </RelativeLayout>
