--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -37,5 +37,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_up" />
+        android:backgroundTint="@color/colorTrans"
+        android:foregroundTint="@color/colorTrans"
+        android:src="@drawable/ic_up"
+        android:tint="@color/colorWhite" />
 </RelativeLayout>
