--- a/app/src/main/res/layout/guide_runes.xml
+++ b/app/src/main/res/layout/guide_runes.xml
@@ -39,6 +39,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_up" />
+        android:backgroundTint="@color/colorTrans"
+        android:foregroundTint="@color/colorTrans"
+        android:src="@drawable/ic_up"
+        android:tint="@color/colorWhite" />
 
 </RelativeLayout>
