--- a/app/src/main/res/layout/guide_champs.xml
+++ b/app/src/main/res/layout/guide_champs.xml
@@ -1,47 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
-        android:id="@+id/head"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/cardview_dark_background">
-
-        <ImageButton
-            android:id="@+id/btn_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/cardview_dark_background"
-            android:src="@drawable/ic_back" />
-
+        android:background="@color/cardview_dark_background"
+        >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:text="LIST CHAMPS"
-            android:textColor="@color/cardview_light_background"
             android:textSize="40dp"
-            android:textStyle="bold" />
+            android:textColor="@color/cardview_light_background"
+            android:textStyle="bold"
+            android:gravity="center"/>
     </LinearLayout>
-
     <ListView
-        android:id="@+id/lv_champs"
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/head" />
+        android:layout_height="match_parent"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_top"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/fab_margin"
-        android:backgroundTint="@color/colorTrans"
-        android:foregroundTint="@color/colorTrans"
-        android:src="@drawable/ic_up"
-        android:tint="@color/colorWhite" />
-
-</RelativeLayout>
+</LinearLayout>
