--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -13,7 +13,15 @@
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        <ImageButton
+            android:id="@+id/btn_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_done"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_gravity="right"/>
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:id="@+id/username_layout"
@@ -34,7 +42,7 @@
             android:id="@+id/edt_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp" />
+            android:textSize="20dp" />
 
     </LinearLayout>
 
@@ -57,7 +65,7 @@
             android:id="@+id/edt_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp" />
+            android:textSize="20dp" />
 
     </LinearLayout>
 
@@ -76,11 +84,12 @@
             android:text="Role            : "
             android:textSize="30dp" />
 
-        <EditText
-            android:id="@+id/edt_role"
+        <Spinner
+            android:id="@+id/spinner_role"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="30dp" />
+            android:layout_height="match_parent"
+            android:entries="@array/role_arrays"
+            android:prompt="@string/role_prompt" />
 
     </LinearLayout>
 
